# acconeer-python-exploration

./: .flake8  .gitattributes  .gitignore  .readthedocs.yaml  CHANGELOG.md  Dockerfile  Jenkinsfile  LICENSE.md  MANIFEST.in  README.md  UNRELEASED_CHANGELOG.md  bitbucket-pipelines.yml  dodo.py  load_recording.py  noxfile.py  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_client_only.txt  requirements_ml.txt  requirements_without_graphics.txt  setup.cfg  setup.py  tox.ini  update_regmap.py
tests/processing/: MANIFEST.in  pyproject.toml  test_processing.py
tests/processing/a111/button_press_sparse/: input.h5  output_default.h5  test_button_press_sparse.py
tests/processing/a111/distance_detector/: calibration.npy  output_threshold_type-recorded_calibration.h5  test_distance_detector.py
tests/processing/a111/obstacle_detection/: obstacle_bg_params_dump.yaml  output_default.h5  test_obstacle_detection.py
tests/processing/a111/presence_detection_sparse/: input.h5  output_default.h5  output_num_removed_pc-1.h5  output_num_removed_pc-2.h5
tests/processing/a111/sleep_breathing/: input.h5  test_sleep_breathing.py
tests/processing/a121/: breathing_test.py  cargo_test.py  distance_test.py  hand_motion_test.py  misc.py  parking_test.py  presence_test.py  smart_presence_test.py  sparse_iq_test.py  surface_velocity_test.py  tank_level_test.py  test_processing.py  touchless_button_test.py  vibration_test.py  waste_level_test.py
tests/processing/a121/data_files/: __init__.py
tests/processing/a121/data_files/expected_output/: breathing-sitting-no-presence-breathing_controller-output.h5  cargo_10_feet-app.h5  cargo_10_feet_only_presence-app.h5  cargo_10_feet_only_presence_2-app.h5  cargo_20_feet-app.h5  cargo_20_feet_no_lens-app.h5  cargo_20_feet_no_lens_add_presence-app.h5  cargo_20_feet_utilization_and_presence-app.h5  cargo_20_feet_utilization_and_presence_2-app.h5  cargo_40_feet-app.h5  cargo_util_and_pres_steering_distance-app.h5  corner-reflector-distance_detector-output.h5  corner-reflector-distance_detector.h5  distance-5to20-detector.h5  distance-5to200_no_cr_cancel-detector.h5  distance-5to200_p1_no_cr_cancel-detector.h5  distance_fixed_strength-detector.h5  distance_fixed_strength-distance_detector-output.h5  hand-motion-default-app.h5  hand-motion-default-hand_motion_app-output.h5  hand-motion-no-presence-hand_motion_app-output.h5  input-distance-detector-200_to_400cm-distance_detector-output.h5  input-distance-detector-5_to_10cm-distance_detector-output.h5  input-distance-detector-5_to_200_cm_close_range_cancellation_disabled-distance_detector-output.h5  input-distance-detector-5_to_200_cm_p1_close_range_cancellation_disabled-distance_detector-output.h5  input-distance-detector-5_to_20cm-distance_detector-output.h5  input-distance_processor-output.h5  input-distance_processor.h5  input-frame_rate_10Hz-sweeps_per_frame_4-presence_default-output.h5  input-parking_ground_default-parking_default-output.h5  input-parking_ground_lp-parking_default-output.h5  input-parking_pole-parking_default-output.h5  (+35 more)
tests/processing/a121/resources/: breathing-sitting-breathing_controller-output.h5  breathing-sitting-no-presence-breathing_controller-opser-output.h5  breathing-sitting-no-presence-breathing_controller-output.h5  breathing-sitting.h5  input-distance-detector-200_to_400cm-distance_detector-output.h5  input-distance-detector-200_to_400cm.h5  input-distance-detector-5_to_10cm-distance_detector-output.h5  input-distance-detector-5_to_10cm.h5  input-distance-detector-5_to_200_cm_close_range_cancellation_disabled-distance_detector-output.h5  input-distance-detector-5_to_200_cm_close_range_cancellation_disabled.h5  input-distance-detector-5_to_20cm-distance_detector-output.h5  input-distance-detector-5_to_20cm.h5  input-distance-detector-distance_detector-output.h5  input-distance-detector.h5  input-distance_default-output.h5  input-distance_processor-output.h5  input-frame_rate_10Hz-sweeps_per_frame_4-presence_default-output.h5  input-presence-0p35m_phase_boost-presence_timeout_2s_phase_boost-output.h5  input-presence-0p35m_phase_boost.h5  input-presence-default-presence_default-output.h5  input-presence-default.h5  input-presence-default_114frames-presence_default-output.h5  input-presence-default_114frames.h5  input-presence-long_range-presence_long_range-output.h5  input-presence-medium_range_phase_boost_no_timeout-presence_medium_range_phase_boost_no_timeout-opser-output.h5  input-presence-medium_range_phase_boost_no_timeout-presence_medium_range_phase_boost_no_timeout-output.h5  input-presence-presence_timeout3s-presence_timeout_3s-output.h5  input-presence-presence_timeout3s.h5  input-presence-short_range-presence_short_range-output.h5  input-presence-short_range.h5  input-sparse_iq_default-output.h5  input-touchless_button_both_ranges-touchless_button_both_ranges-output.h5  input-touchless_button_both_ranges-touchless_button_patience-output.h5  input-touchless_button_both_ranges-touchless_button_sensitivity-output.h5  input-touchless_button_both_ranges.h5  input-touchless_button_calibration-touchless_button_calibration-output.h5  input-touchless_button_default-touchless_button_default-opser-output.h5  input-touchless_button_default-touchless_button_default-output.h5  input.h5  medium_tank-tank_level_controller-opser-output.h5  (+7 more)
tests/processing/button_press_sparse/: input.h5  output_default.h5  test_button_press_sparse.py
tests/processing/distance_detector/: input.h5  output_cfar_sensitivity-0.7_threshold_type-cfar.h5  test_distance_detector.py
tests/processing/obstacle_detection/: input.h5  obstacle_bg_params_dump.yaml  obstacle_bg_params_dump_wrong.yaml  output_default.h5  output_fusion_map-True_use_parameterization-True.h5  test_obstacle_detection.py
tests/processing/presence_detection_sparse/: output_num_removed_pc-1.h5  output_num_removed_pc-2.h5  test_presence_detection_sparse.py
tests/processing/sleep_breathing/: output_default.h5  test_sleep_breathing.py
tests/processing/wave_to_exit/: input.h5  output_default.h5  test_wave_to_exit.py
(+1521 files in other folders)
