[build-system]
requires = [
    "setuptools>=60.0.3",
    "setuptools_scm>=6.4,!=7.0.0",
    "wheel>=0.37.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "0.0.0"
write_to = "src/acconeer/exptool/_version.py"
write_to_template = "__version__ = \"{version}\"\n"

[tool.black]
line-length = 99

[tool.ruff]
# "extend" here adds to the ruff defaults, rather than replacing.
# Q = flake8-quotes, TID = flake8-tidy-imports, I = isort, FA = flake8-future-annotations
extend-select = ["Q", "TID", "I", "FA"]
extend-ignore = ["E741"]  # Ambiguous variable names, e.g. I vs l

line-length = 100

show-fixes = true
show-source = true

src = ["src", "tests"]
namespace-packages = ["src/acconeer"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "E402"]
"src/acconeer/exptool/_winusbcdc/*" = ["F40", "E501"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "parents"

[tool.ruff.isort]
lines-after-imports = 2

known-third-party = [
    "numpy",
    "scipy",
    "serial",
    "matplotlib",
    "h5py",
    "flask",
    "yaml",
    "attr",
    "docutils",
    "keras",
    "sklearn",
    "tensorflow",
    "pytest",
    "requests",
    "packaging",
    "attrs",
    "typing_extensions",
    "qdarktheme",
    "qtawesome",
    "pyperclip",
    "psutil",
]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "PySide6",
    "pyqtgraph",
    "acconeer",
    "first-party",
    "local-folder",
]

[tool.ruff.isort.sections]
"PySide6" = ["PySide6"]
"pyqtgraph" = ["pyqtgraph"]
"acconeer" = ["acconeer"]

[tool.mypy]
packages = [
    "acconeer.exptool.a121",
    "acconeer.exptool.app.new",
    "acconeer.exptool.setup",
    "tests.unit.a121",
    "tests.app",
]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true

warn_return_any = true
warn_unused_ignores = true

no_incremental = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "dirty_equals.*",
    "h5py.*",
    "platformdirs.*",
    "psutil.*",
    "pyperclip.*",
    "pyqtgraph.*",
    "PySide6.*",
    "pytest.*",
    "qdarktheme.*",
    "qtawesome.*",
    "requests.*",
    "scipy.*",
    "serial.*",
]
ignore_missing_imports = true
