[metadata]
name = acconeer-exptool
author = Acconeer AB
author_email = tools@acconeer.com
url = https://github.com/acconeer/acconeer-python-exploration
description = Acconeer Exploration Tool
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause Clear License
license_file = LICENSE.md
project_urls =
    Tracker = https://github.com/acconeer/acconeer-python-exploration/issues
    Documentation = https://acconeer-python-exploration.readthedocs.io
    Source = https://github.com/acconeer/acconeer-python-exploration
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir =
    = src
packages = find_namespace:
zip_safe = False
include_package_data = True
python_requires = >=3.7
install_requires =
    attrs>=21.3.0
    h5py
    numpy>=1.20
    packaging
    pyserial>=3.5
    pyyaml
    typing-extensions>=4,<5
    importlib-metadata

[options.packages.find]
where = src

[options.extras_require]
algo =
    scipy
# app also includes algo dependencies
app =
    docutils>=0.17,!=0.18
    matplotlib
    platformdirs
    pyside6
    pyqtgraph
    scipy
# docs also includes algo dependencies
docs =
    docutils>=0.17,!=0.18
    myst-parser==0.17.0
    scipy
    sphinx>=4.4,<5
    sphinx_rtd_theme
    sphinxext-rediraffe
    sphinx-notfound-page

[flake8]
max-line-length = 99
exclude =
    .git,
    __pycache__,
    build,
    dist,
    *.egg-info,
    env,
    venv,
    stash,
    .tox,
    .nox,
    get-pip.py,
ignore =
    E133,
    E203,
    E226,
    W503,
    E741,
per-file-ignores =
    **/__init__.py:E402,F401
inline-quotes = "
ban-relative-imports = parents

[isort]
line_length = 99
lines_after_imports = 2
multi_line_output = 3
indent = 4
default_section = FIRSTPARTY
include_trailing_comma = true
known_third_party =
    numpy,
    scipy,
    serial,
    matplotlib,
    h5py,
    flask,
    yaml,
    attr,
    docutils,
    keras,
    sklearn,
    tensorflow,
    pytest,
    requests,
    packaging,
    attrs,
known_qt = PySide6
known_plotting = pyqtgraph
known_acconeer = acconeer
sections=FUTURE,STDLIB,THIRDPARTY,QT,PLOTTING,ACCONEER,FIRSTPARTY,LOCALFOLDER
skip =
    .git,
    __pycache__,
    build,
    dist,
    *.egg-info,
    env,
    venv,
    stash,
    .tox,
    .nox,
    get-pip.py,
profile = black

[check_permissions]
default_mode = 664
overrides =
    src/acconeer/exptool/data/libft4222/**/libft4222.so.*:775,
    tests/run-integration-tests.sh:775,

[check_whitespace]

[check_line_length]
line_length = 80
include =
    LICENSE.md,
    CHANGELOG.md,

[check_sdk_mentions]
ignore_lines =
    README.md:37,
    docs/evk_setup/raspberry.rst:29,
    docs/migration_v3_to_v4.rst:6,
# glob matching is explicitly implemented in "check_sdk_mentions"
include =
    README.md,
    docs/**/*.rst,
