[metadata]
name = acconeer-exptool
author = Acconeer AB
author_email = tools@acconeer.com
url = https://github.com/acconeer/acconeer-python-exploration
description = Acconeer Exploration Tool
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause Clear License
license_file = LICENSE.md
project_urls =
    Tracker = https://github.com/acconeer/acconeer-python-exploration/issues
    Documentation = https://acconeer-python-exploration.readthedocs.io
    Source = https://github.com/acconeer/acconeer-python-exploration
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir =
    = src
packages = find_namespace:
zip_safe = False
include_package_data = True
python_requires = >=3.7
install_requires =
    attrs>=22.1.0
    h5py
    numpy>=1.20
    packaging
    pyserial>=3.5
    pyusb>=1.2.1
    pyyaml
    typing-extensions>=4,<5
    importlib-metadata
    textual==0.1.18

[options.packages.find]
where = src

[options.extras_require]
algo =
    requests
    scipy
# app also includes algo dependencies
app =
    bs4
    docutils>=0.17,!=0.18
    matplotlib>=3.5.0
    platformdirs
    psutil
    pyperclip
    pyside6!=6.3.2
    pyqtdarktheme
    pyqtgraph>=0.12.4
    qtawesome
    qtpy>=2.3.0
    requests>=2.0,<3
    scipy
# docs also includes algo dependencies
docs =
    docutils>=0.17,!=0.18
    myst-parser==0.17.0
    scipy
    sphinx>=4.4,<5
    sphinx-design
    pydata-sphinx-theme==0.9.0
    sphinxext-rediraffe
    sphinx-notfound-page

[flake8]
max-line-length = 99
exclude =
    .git,
    __pycache__,
    build,
    dist,
    *.egg-info,
    env,
    venv,
    stash,
    .tox,
    .nox,
    .mypy_cache,
    .pytest_cache,
    get-pip.py,
ignore =
    E133,
    E203,
    E226,
    W503,
    E741,
per-file-ignores =
    **/__init__.py:E402,F401,
    src/acconeer/exptool/_winusbcdc/__init__.py:F401,F403,
    src/acconeer/exptool/_winusbcdc/winusb.py:F403,F405,
    src/acconeer/exptool/_winusbcdc/winusbclasses.py:F403,F405,
    src/acconeer/exptool/_winusbcdc/winusbutils.py:F403,F405,E501
inline-quotes = "
ban-relative-imports = parents

[check_permissions]
default_mode = 664
overrides =
    src/acconeer/exptool/data/libft4222/**/libft4222.so.*:775,
    tests/run-integration-tests.sh:775,

[check_whitespace]
ignore_files =
    **/*.h5,

[check_line_length]
line_length = 80
include =
    LICENSE.md,
    CHANGELOG.md,

[check_sdk_mentions]
ignore_lines =
# glob matching is explicitly implemented in "check_sdk_mentions"
include =
    README.md,
    docs/**/*.rst,

[check_copyright]
ignore_files =
    src/acconeer/exptool/_winusbcdc/*,
