[metadata]
name = acconeer-exptool
author = Acconeer AB
author_email = tools@acconeer.com
url = https://github.com/acconeer/acconeer-python-exploration
description = Acconeer Exploration Tool
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause Clear License
license_file = LICENSE.md
project_urls =
    Tracker = https://github.com/acconeer/acconeer-python-exploration/issues
    Documentation = https://acconeer-python-exploration.readthedocs.io
    Source = https://github.com/acconeer/acconeer-python-exploration
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
package_dir =
    = src
packages = find_namespace:
zip_safe = False
include_package_data = True
python_requires = >=3.8
install_requires =
    attrs>=22.1.0
    cbor2
    h5py>=3.8,<4
    numpy>=1.20
    pandas==1.3.5
    packaging
    pyserial>=3.5
    pyusb>=1.2.1
    pyyaml
    requests>=2.0,<3
    typing-extensions>=4,<5
    textual==0.1.18
    XlsxWriter==3.1.9
    exceptiongroup==1.1.1
    attributes-doc==0.3.0

[options.packages.find]
where = src

[options.extras_require]
algo =
    scipy
# app also includes algo dependencies
app =
    bs4
    docutils>=0.17,!=0.18
    matplotlib>3.5.1
    platformdirs
    psutil
    pyperclip
    pyside6!=6.3.0,!=6.3.2,!=6.5.*
    pyqtdarktheme
    pyqtgraph>=0.12.4
    qtawesome
    qtpy>=2.3.0
    scipy
# docs also includes algo dependencies
docs =
    docutils>=0.17,!=0.18
    myst-parser>=2.0.0
    scipy
    sphinx>=7.2.6
    sphinx-design
    pydata-sphinx-theme==0.14.3
    sphinxext-rediraffe
    sphinx-notfound-page>=1.0.0

[flake8]
exclude =
    .git,
    __pycache__,
    build,
    dist,
    *.egg-info,
    env,
    venv,
    stash,
    .tox,
    .nox,
    .mypy_cache,
    .pytest_cache,
    get-pip.py,

[check_permissions]
default_mode = 664
overrides =
    src/acconeer/exptool/data/libft4222/**/libft4222.so.*:775,
    tests/run-a111-mock-integration-tests.sh:775,
    tests/run-a111-xm112-integration-tests.sh:775,
    tests/run-a121-mock-integration-tests.sh:775,
    tests/release_branch/release_branch_update.sh:775,
    tests/release_branch/release_branch_push.sh:775,

[check_whitespace]
ignore_files =
    **/*.h5,

[check_line_length]
line_length = 80
include =
    LICENSE.md,
    CHANGELOG.md,

[check_sdk_mentions]
ignore_lines =
# glob matching is explicitly implemented in "check_sdk_mentions"
include =
    README.md,
    docs/**/*.rst,
    Jenkinsfile,
    src/acconeer/exptool/app/new/ui/resource_tab/*.py,

[check_copyright]
ignore_files =
    src/acconeer/exptool/_winusbcdc/*,
docs_conf_file = docs/conf.py
